--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,10 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Personal Azure Prac'  # Replace with your Azure subscription name
+    appName: 'TaskifyAzurePrac'  # Replace with your Azure App Service name
+    package: '$(System.DefaultWorkingDirectory)/build' 
+    appType: 'webApp'
