--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
   inputs:
     azureSubscription: 'PersonalAzurePrac'  # Replace with your Azure subscription name
     appName: 'TaskifyAzurePrac'  # Replace with your Azure App Service name
-    package: '$(System.DefaultWorkingDirectory)/**/*.zip' 
+    package: '$(System.DefaultWorkingDirectory)/build' 
     appType: 'webApp'
