--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,9 +20,14 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
+# Verify that the build folder has been created and contains files
+- script: |
+    ls -la $(System.DefaultWorkingDirectory)/build
+  displayName: 'Verify build output'
+
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'PersonalAzurePrac'  # Replace with your Azure subscription name
     appName: 'TaskifyAzurePrac'  # Replace with your Azure App Service name
-    package: '$(System.DefaultWorkingDirectory)/build' 
+    package: '$(System.DefaultWorkingDirectory)/build'
     appType: 'webApp'
